force-app/main/default/objects/MD_Tax_Number__c/MD_Tax_Number__c.object-meta.xml
<CustomObject>
    <label>Tax Number</label>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Tax Number Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>