force-app/main/default/objects/MD_Tax_Number__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Numbers</relationshipLabel>
    <relationshipName>Tax_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>