force-app/main/default/objects/MD_Tax_Number__c/fields/Category_Value__c.field-meta.xml
<CustomField>
    <fullName>Category_Value__c</fullName>
    <label>Category Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>