force-app/main/default/objects/MD_Tax_Number__c/fields/Tax_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category_Code__c</fullName>
    <label>Tax Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PK01 - Pakistan: CNIC</fullName>
            </value>
            <value>
                <fullName>PK02 - Pakistan: FBR - NTN</fullName>
            </value>
            <value>
                <fullName>PK03 - Pakistan: FBR - GST</fullName>
            </value>
            <value>
                <fullName>PK04 - Pakistan: SRB</fullName>
            </value>
            <value>
                <fullName>PK05 - Pakistan: PRA</fullName>
            </value>
            <value>
                <fullName>PK06 - Pakistan: BRA</fullName>
            </value>
            <value>
                <fullName>PK07 - Pakistan: KRA</fullName>
            </value>
            <value>
                <fullName>AR1A - Argentina: CUIT Number</fullName>
            </value>
            <value>
                <fullName>AR1B - Argentina: CUIL Number</fullName>
            </value>
            <value>
                <fullName>AR2 - Argentina: Income Tax Number</fullName>
            </value>
            <value>
                <fullName>AR3 - Argentina: NIP number or CM number</fullName>
            </value>
            <value>
                <fullName>AT0 - Austria: VAT Registration Number</fullName>
            </value>
            <value>
                <fullName>AU0 - Australia: ABN</fullName>
            </value>
            <value>
                <fullName>BE0 - Belgium: VAT Registration Number</fullName>
            </value>
            <value>
                <fullName>BE1 - Belgium: Enterprise Number</fullName>
            </value>
            <value>
                <fullName>BE2 - Belgium: VAT Reg. No. w/o country code</fullName>
            </value>
            <value>
                <fullName>BR1 - Brazil: CNPJ Number</fullName>
            </value>
            <value>
                <fullName>BR3 - Brazil: State Tax Number</fullName>
            </value>
            <value>
                <fullName>BR4 - Brazil: Municipal Tax Number</fullName>
            </value>
            <value>
                <fullName>CA1 - Canada: Goods and Service Tax (GST) No.</fullName>
            </value>
            <value>
                <fullName>CA2 - Canada: Business Number</fullName>
            </value>
            <value>
                <fullName>CA3 - Canada: Provincial Sales Tax (PST) No.</fullName>
            </value>
            <value>
                <fullName>CA4 - Canada: Quebec Sales Tax (QST) No.</fullName>
            </value>
            <value>
                <fullName>CH1 - Switzerland: UID Number</fullName>
            </value>
            <value>
                <fullName>CL1 - Chile: RUT Number</fullName>
            </value>
            <value>
                <fullName>CN0 - China: Tax Number</fullName>
            </value>
            <value>
                <fullName>CZ1 - Czech Republic: DIC Number</fullName>
            </value>
            <value>
                <fullName>CZ2 - Czech Republic: ICO Number</fullName>
            </value>
            <value>
                <fullName>DE0 - Germany: VAT Registration Number</fullName>
            </value>
            <value>
                <fullName>DE1 - Germany: Income Tax Number (§48)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>